--- a/compare.ipynb
+++ b/compare.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "ec9744fe",
    "metadata": {},
    "outputs": [],
@@ -107,16 +107,31 @@
     "    ids = [torch.tensor(tokenizer.encode(p, add_special_tokens=False), dtype=torch.long) for p in prefixes]\n",
     "    if not ids:\n",
     "        return []\n",
-    "    batch = pad_sequence(ids, batch_first=True, padding_value=pad_id).to(device)\n",
+    "    lengths = torch.tensor([len(t) for t in ids], dtype=torch.long)\n",
+    "\n",
+    "    # 2) right-pad to batch max (standard for RNNs)  # pads to the longest length in the batch\n",
+    "    batch = pad_sequence(ids, batch_first=True, padding_value=pad_id).to(device)  # :contentReference[oaicite:1]{index=1}\n",
+    "\n",
+    "    # 3) generate\n",
     "    out_ids = model.generate(batch, max_new_tokens=max_new_tokens, eos_id=eos_id)\n",
-    "    start = batch.size(1)  # right padded\n",
-    "    return [tokenizer.decode(out_ids[i, start:].tolist(), skip_special_tokens=True)\n",
-    "            for i in range(out_ids.size(0))]"
+    "\n",
+    "    W = batch.size(1)  # padded width\n",
+    "    outs = []\n",
+    "    for i, L in enumerate(lengths.tolist()):\n",
+    "        pre_real = out_ids[i, :L]      # unpadded prefix ids\n",
+    "        gen_tail = out_ids[i, W:]      # newly generated ids\n",
+    "        merged  = torch.cat([pre_real, gen_tail], dim=0)\n",
+    "\n",
+    "        full_txt = tokenizer.decode(merged.tolist(), skip_special_tokens=True)\n",
+    "        pref_txt = tokenizer.decode(pre_real.tolist(),  skip_special_tokens=True)\n",
+    "        tail_txt = full_txt[len(pref_txt):].lstrip()   # the true continuation\n",
+    "        outs.append(tail_txt)\n",
+    "    return outs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "05a67981",
    "metadata": {},
    "outputs": [],
@@ -136,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "2563d23f",
    "metadata": {},
    "outputs": [],
@@ -165,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "1c54f71a",
    "metadata": {},
    "outputs": [],
@@ -184,12 +199,12 @@
     "        if torch.cuda.is_available():\n",
     "            torch.cuda.empty_cache()\n",
     "        gc.collect()\n",
-    "    return {\"rouge1\": r1/max(n,1), \"rouge2\": r2/max(n,1)}\n"
+    "    return {\"rouge1\": r1/max(n,1), \"rouge2\": r2/max(n,1)}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "37a2c707",
    "metadata": {},
    "outputs": [
@@ -210,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "0be70079",
    "metadata": {},
    "outputs": [
@@ -221,43 +236,41 @@
       "\n",
       "=== TEST COMPARISON (3/4 → 1/4, word-based) ===\n",
       "LSTM  : ROUGE1=0.043 ROUGE2=0.001\n",
-      "GPT-2 : ROUGE1=0.028 ROUGE2=0.001\n",
+      "GPT-2 : ROUGE1=0.027 ROUGE2=0.001\n",
       "\n",
-      "— Example 163 —\n",
-      "PREFIX   : charlimon haha your mint come on msn if you can\n",
-      "TARGET   : we need a natter\n",
-      "LSTM     : ##t\n",
-      "DistilG2 :  afford it for a little bit and be honest, i am so very excited to see my new car.\n",
-      "This is the first example of how I will produce something that looks great in comparison with anything from their classic Mercedes E-Class model or just like any other brand which has some kind of factory build quality but lacks\n",
+      "— Example 557 —\n",
+      "PREFIX   : zomb1etron hey now you hatin\n",
+      "TARGET   : on lolita\n",
+      "LSTM     : me\n",
+      "DistilG2 : ' not my way guys!\n",
       "\n",
-      "— Example 1160 —\n",
-      "PREFIX   : zarigee i got mcdonalds surpisingly its not a popular drunk food option its sucks that\n",
-      "TARGET   : all diners arent 24hrs here anymore\n",
-      "LSTM     : ##s the best\n",
-      "DistilG2 :  it just wont be the first place in town. if you want to get some extra beer, no problem with this and dont even have an entire bar at home because there are only 10 people who can drink them..\n",
-      "\n",
-      "Also what about all of these places? What do I mean by those things ?\n",
-      "\n",
-      "— Example 1153 —\n",
-      "PREFIX   : daisywalking what that is still really good\n",
-      "TARGET   : only one c\n",
+      "— Example 1207 —\n",
+      "PREFIX   : listening to the man who cant be moved lt3 i just love the connection with gw doing dutch\n",
+      "TARGET   : and might do some art later\n",
       "LSTM     : \n",
-      "DistilG2 : ,›\n",
-      "And to do it right.\n",
+      "DistilG2 :  (and I know how a lot of people in this community have expressed themselves) and then that he was able to do something nice.\n",
+      "He said: \"I'm not saying you should stick to working for Gw, but if it works out well on your next project we'll see.\"\n",
       "\n",
-      "— Example 463 —\n",
-      "PREFIX   : 2hrs sleep bad day\n",
-      "TARGET   : at work\n",
-      "LSTM     : \n",
-      "DistilG2 : , but he's so busy.\n",
-      "I get bored with what I'm doing and not even seeing my wife go home to the kitchen or eating all of it because she hasn't done a job for me yet. So why are we having sex? We're feeling like our kids can do nothing except eat some food instead\n",
+      "— Example 1248 —\n",
+      "PREFIX   : katiielady it was in response to\n",
+      "TARGET   : his tweet\n",
+      "LSTM     : the beach\n",
+      "DistilG2 :  her refusal to comply with the order.\n",
+      "She said she would not be able to attend a meeting at which Giorgio took place, though even if that were agreed on by Sajid Javid of New Delhi and Chief Minister Modi's own party-led government there is no reason for them not attending during his\n",
       "\n",
-      "— Example 371 —\n",
-      "PREFIX   : whoooos coming with me to pub quiz tonight almost everyone else\n",
-      "TARGET   : is out of town\n",
-      "LSTM     : \n",
-      "DistilG2 :  I know will be talking about my life, and as you might have seen at the time of writing this article.\n",
-      "I'm sorry we couldn't get that wrong from us here in London... but what are your thoughts on going forward? Have fun watching some live action videos below!\n"
+      "— Example 73 —\n",
+      "PREFIX   : i dont want every where to smell like an\n",
+      "TARGET   : air freshening product\n",
+      "LSTM     : hour\n",
+      "DistilG2 :  air-conditioning machine. it doesnt have the same feeling of its own being and I think you guys are probably pretty good at that!\n",
+      "I am sorry for not liking your game, but since i played a lot more with my friends this is what makes me really happy about yours playing as well.... The way we\n",
+      "\n",
+      "— Example 739 —\n",
+      "PREFIX   : gillyheartsyou exciting ive never even felt certain that\n",
+      "TARGET   : theyre real people\n",
+      "LSTM     : was a good thing\n",
+      "DistilG2 : .\n",
+      "She said she was a child and he thought this should be about my daughter being raped or having sex with her mother, but they don't care enough to say anything in the morning when it's only natural for them at night like there are no more kids under 6 of your age than I have been out on\n"
      ]
     }
    ],
